Updated Readme and server test

--- a/book-management-web/src/main/resources/application.properties
+++ b/book-management-web/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=BookManagementWeb
-server.port=8010
+server.port=${PORT:8010}
 
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
-api.base.url=http://localhost:8000/api/v1
+api.base.url=${API_BASE_URL:http://localhost:8000/api/v1}
 
 server.error.include-message=always
 spring.mvc.view.viewClass=org.springframework.web.servlet.view.JstlView
