--- a/book-management-web/Dockerfile
+++ b/book-management-web/Dockerfile
@@ -1,9 +1,4 @@
 FROM openjdk:8-jdk-alpine
-
-WORKDIR /app
-
-COPY target/*.jar app.jar
-
 EXPOSE 8010
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY target/*.war app.war
+ENTRYPOINT ["java", "-jar", "/app.war"]
