--- a/book-management-service/Dockerfile
+++ b/book-management-service/Dockerfile
@@ -1,9 +1,4 @@
 FROM openjdk:8-jdk-alpine
-
-WORKDIR /app
-
-COPY target/*.jar app.jar
-
 EXPOSE 8000
-
-ENTRYPOINT ["java", "-jar", "app.jar"]
+COPY target/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "/app.jar"]
