--- a/book-management-service/src/main/resources/application.properties
+++ b/book-management-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BookManagementService
-server.port=8000
+server.port=${PORT:8000}
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
@@ -7,8 +7,10 @@ spring.datasource.username=username
 spring.datasource.password=password
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
